--- a/lib/cg_bcol_make.wiki
+++ b/lib/cg_bcol_make.wiki
@@ -27,6 +27,7 @@ variant annotation (a different score for each potential alternative allele).
 ; **-p poscol**: name of the column that contains the positions
 ; **-d defaultvalue** (--default): value that will be given for positions not in the input file
 ; **-co compressionlevel** (--compress): compression level used (default 9): 1 is very fast; 9 is slow, but compresses better, 0 can be used for no compression
+; **--precision precision**: default precision for display of data in bcol
 ; **-h header** (--header): set to 0 (default is 1) if the input data does not have a header (in this case chromosomecol and poscol must be given by number, starting from 0)
 ; **-l multilist** (--multilist): a comma separated list with the names of all columns, 
 e.g. A,C,G,T for variant annotation. This option must be given together with the next option (-m)
