--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -31,6 +31,8 @@ combined using different number of asterisks. The example uses 2 asterisks. You 
 to be careful; if the definition contains a multiplication (an asterisk), it would also be replaced 
 by the pattern.
 ; **-rf removefields**: write all, except given fields to result.
+; **-samples**: Only the given list of samples (space separated) will be included in the output.
+All non-sample related fields (those without a -) will be included.
 ; **-s sortfields**: sort on given fields (uses natural sort, so that e.g. 'chr1 chr2 chr10' will be sorted correctly)
 if **sortfields** is "-", the default sort fields will be used (chromosome,begin,end,type,alt).
 This will also accept name variations of the fields, such as chrom instead of chromosome.
