cg select: added option -hn (give header as a parameter)

--- a/lib/cg_select.wiki
+++ b/lib/cg_select.wiki
@@ -48,6 +48,7 @@ with .sampleinfo or .sampleinfo.tsv appended, it will be used as sampleinfofile 
 ; **-hc headerincomment**: if 1, the last of the starting comment lines will be used for the header instead of the first non-comment line. 
 If 2, the result file will also have the header in the last comment.
 ; **-hf headerfile**: datafile does not have a header, the header will be read from **headerfile** instead
+; **-hn header**: datafile does not have a header, the list (space separated) given in this parameter will be used as header for the file
 ; **-rc 0/1**: remove comment
 ; **-h 0/1**: return header fields in file
 ; **-n 0/1**: return sample names in file
