--- a/docs/format_bcol.wiki
+++ b/docs/format_bcol.wiki
@@ -51,6 +51,7 @@ The comments before the table must contain the following information:
 ; S: small integer (16 bit) in big-endian byte order
 ; t: small integer (16 bit) in machine native byte order
 ; c: 8 bit integer (1 byte or character)
+The integer types can have an u appended for unsigned types
 
 == bcolfile.bcol.bin.lz4 ==
 bcolfile.bcol.bin.lz4 is the (compressed) binary file containing the
