cg pmulticompar: added varall, targets

--- a/lib/cg_multicompar.wiki
+++ b/lib/cg_multicompar.wiki
@@ -7,27 +7,32 @@ cg multicompar ?options? multicomparfile sampledir/varfile ...
 Compare multiple variant files
 
 == Description ==
-This command is used to create a multicompar file.
-This is a tab separated file containing a wide table used to compare variants between different samples.
-Each line contains general variant info (position, type, annotation, etc.), plus columns with variant 
-info specific to each sample (genotype, coverage, etc.). The latter have a column heading of 
-the form field-<source>. source will generally be the samplename, but may also be of the form 
-method-samplename to indicate sequencing or analysis method, thus allowing the comparison of different 
-methods on the same sample.
+This command combines multiple variant files into one multicompar file; a
+tab separated file containing a wide table used to compare variants
+between different samples. Each line in the table contains general variant
+info (position, type, annotation, etc.) and columns with variant info
+specific to each sample (genotype, coverage, etc.). The latter have a
+column heading of the form field-<sample>.
 
-The source that is added after the fieldnames (-samplename, -method-samplename) is extracted from the filenames:
-* If a sample directory was specified, <source> will be the directory name. The directory should contain a
-file <source>/fannotvar-<source>.tsv that will be used as variantfile.
-* If a filename is given, <source> will be extracted by removing the file extension and the start 
-of the filename up to and including the first - (which is expected to be
-some indicator of type). e.g. the file var-bowtie2-sample1.tsv will yield bowtie2-sample1 as source.
- 
-When some samples contain a variant that others do not, the information in the multicompar file cannot
-be complete by comparing variant lists alone: A variant missing in a variant list may either mean
-that it is reference or that it is not sequenced. Information about coverage, etc. will also be missing.
-multicompar will indicate this missing information with a questing mark in the table; this missing information
-can be added by using the -reannot option or the multicompar_reannot command, if it is available in other files.
-(check cg multicompar_reannot help for more info)
+The <sample> name used is extracted from the filename of the variant
+files by removing the file extension and the start of
+the filename up to and including the first -. (Variant files are
+expected to use the following convention: var-<sample>.tsv.)
+<sample> can be simply the samplename, but may also include information
+about e.g. the sequencing or analysis method in the form method-samplename, e.g.
+var-gatk-sample1.tsv and var-sam-sample1.tsv to indicate variants called
+using gatk and samtools respectively for the same sample (sample1), thus
+allowing comparison of different methods, etc.
+
+When some samples contain a variant that others do not, the information in
+the multicompar file cannot be complete by combining variant files alone:
+A variant missing in one variant file may either mean that it is reference
+or that it is not sequenced. Other information about coverage, etc. on the
+variant not present in the variant file will also be missing. 
+multicompar will indicate this missing information with a questing mark in
+the table; this missing information can be added by using the -reannot
+option or the multicompar_reannot command, if it is available in other
+files. (check cg multicompar_reannot help for more info)
 
 Fields starting with l: will be regarded as list dependend on different alt 
 genotypes (a comma separated list). The -listfields option can be used to define columns
