--- a/docs/howto.wiki
+++ b/docs/howto.wiki
@@ -1,10 +1,10 @@
 = Howtos =
 
 == Howtos ==
-* [[cg_process_illumina|Illumina]]: How to process Illumina projects starting from fastq read data to an annotated multicompar file
+* [[howto_multicompar|howto_multicompar]]: How to process, compare, and annotate multiple Complete Genomics genomes
 
-* [[howto_multicompar|multicompar]]: How to process, compare, and annotate multiple Complete Genomics genomes
+* [[cg_process_illumina|process_illumina]]: How to process Illumina projects starting from fastq read data to an annotated multicompar file
 
-* [[howto_query|query]]: Fast querying of annotated files, provides additional functionality for comparing genotypes across multiple genomes
+* [[howto_query|howto_query]]: Fast querying of annotated files, provides additional functionality for comparing genotypes across multiple genomes
 
-* [[howto_functions|Further functions]]: Genome region operations, summaries, primer design for validation, ...
+* [[howto_functions|howto_functions]]: Further functions: Genome region operations, summaries, primer design for validation, ...
